# ai-agent

./: .gitignore  Makefile  README.md  agent.db  main_loop.py  pyproject.toml  test.py  test_repl.py  test_repl_server.py  test_runner.py
ai_agent/: __main__.py  agent.py  agent_history.py  api.py  argparse_command.py  chat_room_service.py  chatgpt_chatter.py  command.py  command_docs.py  command_parser.py  default_agent.py  default_command_parser.py  default_formatters.py  event_bus.py  interactive_chatter.py  jinja2_template.py  message_provider.py  models.py  modular_agent.py  prioritizers.py  runner.py  service.py  working_memory_service.py
ai_agent/cli/: __init__.py  main.py
ai_agent/utils/: aiohttp.py  asyncio.py  blinker.py  capture_output.py  fun_name.py  importlib.py  logging.py  sqlalchemy.py
